add platoon image

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 										<h2><a href="#">Real-time Corridor Optimizer </a></h2>
 										<h6><a href="#">Gainesville, FL</a></h6>
 									</header>
-									<a  class="image fit"><img src="images/RIO_control.JPG" alt="" height="250"/></a>
+									<a  class="image fit"><img src="images/platoon.JPG" alt="" height="250"/></a>
 									<h4 align="left">Summary</h4>
 									<p> Currently I am developing algorithms' implementation to optimize traffic performance in urban environment. 
 										The conceptual framework is applicable for simulation tools as well as for real-world implementations. 
