--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 								<article>
 									<header>
 										<span class="date">Graduate Research Assistant </span>
-										<h2><a href="#">Real-time Corridor Optimizer </a></h2>
+										<h2><a href="#">Platooning Trajectory Optimization</a></h2>
 										<h6><a href="#">Gainesville, FL</a></h6>
 									</header>
 									<a  class="image fit"><img src="images/platoon.JPG" alt="" height="250"/></a>
