--- a/awards.html
+++ b/awards.html
@@ -90,7 +90,7 @@
 						</section>
 						<section>
 							<h3>Email</h3>
-							<p><a href="mailto:agustinguerra@ufl.edu">agustinguerra@ufl.edu</a></p>
+							<p><a href="mailto:a-guerra89@hotmail.com">a-guerra89@hotmail.com</a></p>
 						</section>
 					
 					</section>
