--- a/news.html
+++ b/news.html
@@ -27,9 +27,10 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="awards.html">Awards</a></li>
-							<li><a href="generic.html">Interests</a></li>
+							<li><a href="interest.html">Interests</a></li>
 							<!-- <li><a href="ml_dojo.html">ML Dojo</a></li> -->
 							<li class="active"  ><a href="news.html">News</a></li>
+							<li><a href="blog.html">Blog</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/agustingu" target="_blank" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
