--- a/readings.html
+++ b/readings.html
@@ -27,7 +27,7 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="awards.html">Awards</a></li>
-							<li><a href="generic.html">Interests</a></li>
+							<li><a href="interest.html">Interests</a></li>
 							<!-- <li><a href="ml_dojo.html">ML Dojo</a></li> -->
 							<li class="active"  ><a href="news.html">News</a></li>
 						</ul>
