--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 										transportation field, and the 
 										desire of providing people with more freedom while commuting.  
 										I like to focus on designing projects that tackle our diverse communities' problems 
-										concentrating on innovation, safety, sustainability, operation performance, and the economy of the project. <br />
+										concentrating on innovation, safety, sustainability, and operation performance. 
 										
 
 										Here is my  <a href="https://agustingu.github.io/resume/Agustin_Resume_bw.pdf" target="_blank" style="color:rgb(0, 162, 255);" >RESUME</a>, 
@@ -96,7 +96,7 @@
 									</header>
 									<a  class="image fit"><img src="images/platoon.JPG" alt="" height="250"/></a>
 									<h4 align="left">Summary</h4>
-									<p> Currently I am developing algorithms' implementation to optimize traffic performance in urban environment. 
+									<p> Currently I am developing algorithms to optimize traffic performance in urban environment. 
 										The conceptual framework is applicable for simulation tools as well as for real-world implementations. 
 										Different types of optimization paradigms (LP, MINLP, INLP) are applied to 
 										minimize travel time considering CAV capabilities. A comparison between an actuated
@@ -104,7 +104,7 @@
 										The improvements varies from [10-22%] in travel time reduction.
 									</p>
 									<h4 align="left">Tools</h4>
-									<p>Python, CPLEX, gurobi, AMPL, MiniZinc, VISSIM.</p>
+									<p>Python, CPLEX, VISSIM.</p>
 									<!-- <ul class="actions special"> -->
 										<!-- <li><a href="#" class="button">Full Story</a></li> -->
 									</ul>
@@ -179,7 +179,7 @@
 									<h4 align="left">Summary</h4>
 									<p>As one of the most ambitious projects, I have worked on. This project considered the design and rehabilitation of around 153KM
 										of rural roads. 
-										The project is located through mountainous terrain surrounding the oriental region of the capital city of Colombia "Bogota". 
+										The project is located through mountainous terrain surrounding the oriental region of Bogota, Colombia. 
 										This project considered several roundabouts, interchanges, bridges, and its construction cost was estimated to be around 
 										$1.0 U.S Billions. 
 										I served as the lead highway design engineer, and coordinate the design team. In addition, 
