--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="awards.html">Awards & Service</a></li>
+							<li><a href="awards.html">Awards</a></li>
 							<li><a href="interest.html">Interests</a></li>
 							<li><a href="news.html">News</a></li>
 							<li class="active"><a href="blog.html">Blog</a></li>
