--- a/blog.html
+++ b/blog.html
@@ -48,7 +48,7 @@
 							<h3>January, 2022 </h3>
 							<ul>
 								<li><a href="https://raw.githack.com/agustingu/agustingu.github.io/master/blog_htmls/vissim_speed_signals.html" 
-									target="_blank"  >Evaluating the CAVs simulation considerations in VISSIM 2022</a>: A qualitative view of the
+									target="_blank"  style="color:rgb(0, 162, 255)" >Evaluating the CAVs simulation considerations in VISSIM 2022</a>: A qualitative view of the
 									PTV-VISSIM considerations for CAVs simulation. </li>
 
 
