--- a/index.html
+++ b/index.html
@@ -292,14 +292,14 @@
 								<article>
 									<header>
 										<span class="date">Highway Engineer</span>
-										<h2><a href="#">Chan II</a></h2>
+										<h2><a href="#">Chan II Dam</a></h2>
 										<h6><a href="#">Panama</a></h6>
 									</header>
 									<a  class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 									<h4 align="left">Summary</h4>
 									<p>This was a feasibility study for one of the more ambitious hydroelectric projects in the country. Its execution is on hold. 
 										However, I had the opportunity of providing the geometric design of the access roads to complete the project. 
-										These roads were mountainous roads with grades around [6-12%] and above in some cases. The roads passed through the virgin jungle 
+										These roads were mountainous roads with grades around [6-14%] and above in some cases. The roads passed through the virgin jungle 
 										and they were meant to remain after the finalization of the project providing accessibility to the project and indigenous 
 										communities in the area. In addition to the geometric design, I also estimated the earthworks, and  drainage works required to complete the project. 
 										I also did a minor collaboration with the geotechnical team to evaluate alternatives to provide construction plans for the project.
