--- a/interest.html
+++ b/interest.html
@@ -57,7 +57,7 @@
 								<p>Latelly many applications in the transportation industry are seeking to optimize traffic performance exploiting CAV capabilities.
 								Hence, as a young researcher and curios engineer I'm developing a guide to implement optimization problems with python. I hope
 								this guidance will help anyone with curiosity about the topic.
-								See the <a href="https://github.com/agustingu/Operation-Research">GitHub Repository</a> on how to use Python to solve optimization problems.</p>
+								See the <a href="https://github.com/agustingu/Operation-Research" style="color:rgb(0, 162, 255)" >GitHub Repository</a> on how to use Python to solve optimization problems.</p>
 
 								<hr/>
 								<!-- Text stuff -->
