--- a/news.html
+++ b/news.html
@@ -50,8 +50,8 @@
 								<ul>
 									<li>Podium presentation at the 7th Annual UTC Conference for the Southeastern Region. 
 										<i> A Trajectory-based Method for Platoon Formation of Connected and Automated Vehicles</i>, 
-										<a href="https://nbviewer.org/github/agustingu/agustingu.github.io/blob/master/posters/TRR_21.pdf" 
-										target="_blank" style="color:rgb(0, 162, 255)" >Slides</a> </li>
+										<a href="https://github.com/agustingu/agustingu.github.io/blob/master/posters/TRR_21.pdf" 
+										target="_blank" type="application/pdf" style="color:rgb(0, 162, 255)" >Slides</a> </li>
 								</ul>
 								<h3>January, 2022 </h3>
 								<ul>
