updates of typos and htmls

--- a/blog.html
+++ b/blog.html
@@ -51,9 +51,9 @@
 									target="_blank"  style="color:rgb(0, 162, 255)" >Evaluating the CAVs simulation considerations in VISSIM 2022</a>: A qualitative view of the
 									PTV-VISSIM considerations for CAVs simulation. </li>
 
-									<!-- <li><a href="https://raw.githack.com/agustingu/agustingu.github.io/master/blog_htmls/vissim_speed_signals.html" 
+									<li><a href="https://raw.githack.com/agustingu/agustingu.github.io/master/blog_htmls/Adjust_Trajectory_LP_Formulation.html" 
 										target="_blank"  style="color:rgb(0, 162, 255)" >Evaluating the CAVs simulation considerations in VISSIM 2022</a>: A qualitative view of the
-										PTV-VISSIM considerations for CAVs simulation. </li> -->
+										PTV-VISSIM considerations for CAVs simulation. </li>
 
 
 							
