--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 								</header>
 									<p> I am an engineering professional with +5 years of experience in the transportation industry. 
 										My experience includes highway design, 
-										and slope-stability analysis. Recently I have started learning ground improvement technics, traffic analysis and modeling. 
-										<br/>
+										and slope-stability analysis. I also have training in ground improvement techniques, traffic analysis, and modeling.
+										
 
 										Currently, I am pursuing a PhD in Civil Engineering at the University of Florida. 
 										I am conducting my research in traffic operations. I am developing optimizations'
@@ -96,9 +96,9 @@
 									</header>
 									<a  class="image fit"><img src="images/platoon.JPG" alt="" height="250"/></a>
 									<h4 align="left">Summary</h4>
-									<p> Currently I am developing algorithms to optimize traffic performance in urban environment. 
+									<p> Currently, I am developing algorithms to optimize traffic performance in urban environment. 
 										The conceptual framework is applicable for simulation tools as well as for real-world implementations. 
-										Different types of optimization paradigms (LP, MINLP, INLP) are applied to 
+										Different types of optimization paradigms (LP, MINLP, INLP) are studied to 
 										minimize travel time considering CAV capabilities. A comparison between an actuated
 										control and the proposed algorithms have confirmed the benefits of our strategy. 
 										The improvements varies from [10-22%] in travel time reduction.
@@ -139,7 +139,7 @@
 									<h4 align="left">Summary</h4>
 									<p>This research was conducted to fulfill the Master's degree requirement in Civil Engineering at KU. 
 										This study seeked to assess driver behavior in a simulated Connected environment. 
-										Furthermore, lane-changing models were developed and implemented in a driving simulator.
+										Lane-changing models were developed and implemented in a driving simulator.
 									</p>
 									<h4 align="left">Tools</h4>
 									<p>SPSS, MiniSIM, Fixed Based Driving Simulator, R, eyetracking device.</p>
