--- a/awards.html
+++ b/awards.html
@@ -69,7 +69,7 @@
 								<h2>Service</h2>
 								<li> <em>2020 - 2022:</em> Student Representative at the Internal Steering Committee at<a href="https://www.transportation.institute.ufl.edu/overview/faculty-staff/civil-coastal-engineering/" target="_blank"> UFTI</a></li>
 								<li> <em>2021 - 2022:</em> ITE Student Chapter Vice-president at the University of Florida </li>
-								<li> <em>2018 - 2019:</em> Board memmber of the Fulbright student chapter in Lawrence, KS</li>
+								<li> <em>2018 - 2019:</em> Board member of the Fulbright student chapter in Lawrence, KS</li>
 								<li> <em>2013 - 2017:</em> Volunteer at Louis Berger, Panama</li>
 
 								
