--- a/blog.html
+++ b/blog.html
@@ -52,8 +52,8 @@
 									PTV-VISSIM considerations for CAVs simulation. </li>
 
 									<li><a href="https://raw.githack.com/agustingu/agustingu.github.io/master/blog_htmls/Adjust_Trajectory_LP_Formulation.html" 
-										target="_blank"  style="color:rgb(0, 162, 255)" >Evaluating the CAVs simulation considerations in VISSIM 2022</a>: A qualitative view of the
-										PTV-VISSIM considerations for CAVs simulation. </li>
+										target="_blank"  style="color:rgb(0, 162, 255)" >Get optimum acceleration within max/min thresholds</a>: A linear program using 
+										kinematic equations to adjust vehicle speed by finding optimum acceleration. </li>
 
 
 							
