A linear program using
										kinematic equations to adjust vehicle speed by finding optimum acceleration.

--- a/blog.html
+++ b/blog.html
@@ -52,7 +52,7 @@
 									PTV-VISSIM considerations for CAVs simulation. </li>
 
 									<li><a href="https://raw.githack.com/agustingu/agustingu.github.io/master/blog_htmls/Adjust_Trajectory_LP_Formulation.html" 
-										target="_blank"  style="color:rgb(0, 162, 255)" >Get optimum acceleration within max/min thresholds</a>: A linear program using 
+										target="_blank"  style="color:rgb(0, 162, 255)" >Get optimum acceleration for a CAV within max/min thresholds</a>: A linear program using 
 										kinematic equations to adjust vehicle speed by finding optimum acceleration. </li>
 
 
