--- a/blog.html
+++ b/blog.html
@@ -55,7 +55,7 @@
 										target="_blank"  style="color:rgb(0, 162, 255)" >Get optimum acceleration for a CAV within max/min thresholds</a>: A linear program using 
 										kinematic equations to adjust vehicle speed by finding optimum acceleration. </li>
 
-									<li><a href="https://raw.githack.com/agustingu/agustingu.github.io/master/blog_htmls/Adjust_Trajectory_LP_Formulation.html" 
+									<li><a href="https://nbviewer.org/github/agustingu/agustingu.github.io/blob/master/blog_htmls/VRP_pdf_notebook.pdf" 
 										target="_blank"  style="color:rgb(0, 162, 255)" >Vehicle Routing Problem Example</a>: Step by step formulation of VRP (Integer Programming). </li>
 						
 							
