--- a/awards.html
+++ b/awards.html
@@ -56,7 +56,7 @@
 								<div class="image main"><img src="images/fulb.jpg" alt="" /></div>
 								<h2> Awards </h2>
 
-								<li> <em>2022:</em> Recipient of the <a href="https://www.itsflorida.org/the-anne-brewer-scholarship-program" 
+								<li> <em>2022:</em> Recipient of the <a href="https://www.itsflorida.org/" 
 									target="_blank">ITS Florida Anne Brewer Academic Scholarships</a></li>
 
 								<li> <em>2017:</em> Recipient of the <a href="https://us.fulbrightonline.org/" target="_blank">Fulbright Scholarship</a>
