--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Elements Reference - Agustin Guerra H.</title>
+		<title>Agustin Guerra - Blog</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -26,7 +26,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="awards.html">Awards</a></li>
+							<li><a href="awards.html">Involvement</a></li>
 							<li><a href="interest.html">Interests</a></li>
 							<li><a href="news.html">News</a></li>
 							<li class="active"><a href="blog.html">Blog</a></li>
