--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="awards.html">Awards</a></li>
+							<li><a href="awards.html">Involvement</a></li>
 							<li><a href="interest.html">Interests</a></li>
 							<li><a href="news.html">News</a></li>
 							<li><a href="blog.html">Blog</a></li>
