--- a/interest.html
+++ b/interest.html
@@ -26,7 +26,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="awards.html">Awards</a></li>
+							<li><a href="awards.html">Involvement</a></li>
 							<li class="active" ><a href="interest.html">Interests</a></li>
 							<!-- <li><a href="ml_dojo.html">ML Dojo</a></li> -->
 							<li><a href="news.html">News</a></li>
