replace main imag

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 										and <a href="https://agustingu.github.io/resume/Agustin_G_CV.pdf" target="_blank" style="color:rgb(0, 162, 255)" >CV</a>.
 										<!-- I am currently looking for an internship (Summer 2022). </p> -->
 								
-								<a class="image main"><img src="images/porfolio.jpg" alt="" /></a>
+								<a class="image main"><img src="images/portfolio.PNG" alt="" /></a>
 								<!-- <ul class="actions special">
 									<li><a href="#" class="button large">Portfolio</a></li>
 								</ul> -->
