--- a/awards.html
+++ b/awards.html
@@ -58,7 +58,7 @@
 
 								<h2>Involvement</h2>
 								<li> <em>2022 - Present:</em> Volunteer at the Young Member Council YMCC-S&R (ongoing project)</li>
-								<li> <em>2022 - Present:</em> Co-founder of the IEEE-ITS student chapter at the University of Florida (ongoing project)</li>
+								<li> <em>2022 - Present:</em> Interim Chair of the IEEE-ITSS student chapter at the University of Florida (ongoing project)</li>
 								<li> <em>2020 - 2022:</em> Student Representative at the Internal Steering Committee at<a href="https://www.transportation.institute.ufl.edu/overview/faculty-staff/civil-coastal-engineering/" target="_blank"> UFTI</a></li>
 								<li> <em>2021 - 2022:</em> ITE Student Chapter Vice-president at the University of Florida </li>
 								<li> <em>2018 - 2019:</em> Board member of the Fulbright student chapter in Lawrence, KS</li>
