--- a/index.html
+++ b/index.html
@@ -90,8 +90,29 @@
 							<section class="posts">
 								<article>
 									<header>
+										<span class="date">Personal Project</span>
+										<h2><a href="#">Social Network from Research Journals</a></h2>
+										<h6><a href="#">Gainesville, FL</a></h6>
+									</header>
+									<a  class="image fit"><img src="images/D_50.PNG" alt="" height="250"/></a>
+									<h4 align="left">Summary</h4>
+									<p> In this repository we developed a data scrapper that gets authors relationship on research journals.
+										With the relationships a social network is developed so to identify leaders in similar research areas.  
+									</p>
+									<h4 align="left">Tools</h4>
+									<p>Python, NumPy, Matplotlib, Selenium.</p>
+									<!-- <ul class="actions special"> -->
+										<!-- <li><a href="#" class="button">Full Story</a></li> -->
+									</ul>
+								</article>
+
+
+
+
+								<article>
+									<header>
 										<span class="date">Graduate Research Assistant </span>
-										<h2><a href="#">Platooning Trajectory Optimization</a></h2>
+										<h2><a href="https://doi.org/10.1177/03611981221112099">Platooning Trajectory Optimization</a></h2>
 										<h6><a href="#">Gainesville, FL</a></h6>
 									</header>
 									<a  class="image fit"><img src="images/platoon.JPG" alt="" height="250"/></a>
@@ -101,10 +122,10 @@
 										Different types of optimization paradigms (LP, MINLP, INLP) are studied to 
 										minimize travel time considering CAV capabilities. A comparison between an actuated
 										control and the proposed algorithms have confirmed the benefits of our strategy. 
-										The improvements varies from [10-22%] in travel time reduction.
+										The improvements varies from [7-16%] in travel time reduction. 
 									</p>
 									<h4 align="left">Tools</h4>
-									<p>Python, CPLEX, VISSIM.</p>
+									<p>Python, CPLEX, NumPy, Matplotlib, VISSIM.</p>
 									<!-- <ul class="actions special"> -->
 										<!-- <li><a href="#" class="button">Full Story</a></li> -->
 									</ul>
