--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@
 									</header>
 									<a  class="image fit"><img src="images/D_50.PNG" alt="" height="250"/></a>
 									<h4 align="left">Summary</h4>
-									<p> In this repository we developed a data scrapper that gets authors relationship on research journals.
-										With the relationships a social network is developed so to identify leaders in similar research areas.  
+									<p> I developed a data scrapper that gets authors' relationships from research journals. The relationship is a label 
+										between the combination of authors on each paper.
+										With the relationships, a social network is developed. Then betweenness centrality, degree of centrality, and closeness centrality are measured.  
 									</p>
 									<h4 align="left">Tools</h4>
 									<p>Python, NumPy, Matplotlib, Selenium.</p>
