--- a/index.html
+++ b/index.html
@@ -87,7 +87,36 @@
 							</article>
 
 						<!-- Posts -->
+
+
+
+
+
+
+						
 							<section class="posts">
+								<article>
+									<header>
+										<span class="date">Personal Project</span>
+										<h2><a href="#">Data Scrapping and ML House Pricing Prediction</a></h2>
+										<h6><a href="#">Gainesville, FL</a></h6>
+									</header>
+									<a  class="image fit"><img src="images/rf_results.png" alt="" height="300"/></a>
+									<h4 align="left">Summary</h4>
+									<p> I developed a scraper that extracts data from an advertisement website of real-state in Panama. 
+										The data is then preprocessed to develop predictive machine learning models 
+										(ANN, RF, Linear, and Polynomial regression). In the future, 
+										I plan to incorporate data from different countries in the region and include network infrastructure data in the models. 
+										I hope this project will help stakeholders to make more informed decisions or 
+										to inform policymakers about the dynamic of the housing market in the region.  
+									</p>
+									<h4 align="left">Tools</h4>
+									<p>Python, NumPy, Matplotlib, Selenium, webdrivermanager, scikit-learn, TensorFlow.</p>
+									<!-- <ul class="actions special"> -->
+										<!-- <li><a href="#" class="button">Full Story</a></li> -->
+									</ul>
+								</article> 
+
 								<article>
 									<header>
 										<span class="date">Personal Project</span>
@@ -97,15 +126,15 @@
 									<a  class="image fit"><img src="images/D_50.PNG" alt="" height="250"/></a>
 									<h4 align="left">Summary</h4>
 									<p> I developed a data scrapper that gets authors' relationships from research journals. The relationship is a label 
-										between the combination of authors on each paper.
-										With the relationships, a social network is developed. Then betweenness centrality, degree of centrality, and closeness centrality are measured.  
+										between the combination of authors on each paper. This allow to built social communities to identify researchers that investigate similar topics.
+										Then, this network is use to track history of different studies within each community. This tool helps with the literature review stage.  
 									</p>
 									<h4 align="left">Tools</h4>
-									<p>Python, NumPy, Matplotlib, Selenium.</p>
+									<p>Python, NumPy, Matplotlib, Selenium, webdrivermanager .</p>
 									<!-- <ul class="actions special"> -->
 										<!-- <li><a href="#" class="button">Full Story</a></li> -->
 									</ul>
-								</article>
+								</article> 
 
 
 
