--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 										concentrating on innovation, safety, sustainability, and operation performance. 
 										
 
-										Here is my  <a href="https://agustingu.github.io/resume/Agustin_Resume_bw.pdf" target="_blank" style="color:rgb(0, 162, 255);" >RESUME</a>, 
-										and <a href="https://agustingu.github.io/resume/Agustin_G_CV.pdf" target="_blank" style="color:rgb(0, 162, 255)" >CV</a>.
+										Here is my  <a href="https://agustingu.github.io/resume/Agustin_Resume_OR_DS.pdf" target="_blank" style="color:rgb(0, 162, 255);" >RESUME</a>, 
+										and <a href="https://agustingu.github.io/resume/Agustin_Guerra_CV__EL.pdf" target="_blank" style="color:rgb(0, 162, 255)" >CV</a>.
 										<!-- I am currently looking for an internship (Summer 2022). </p> -->
 								
 								<a class="image main"><img src="images/portfolio.PNG" alt="" /></a>
