hide the interest:x!

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="awards.html">Involvement</a></li>
-							<li><a href="interest.html">Interests</a></li>
+							<!-- <li><a href="interest.html">Interests</a></li> -->
 							<li><a href="news.html">News</a></li>
 							<li><a href="blog.html">Blog</a></li>
 						</ul>
