--- a/awards.html
+++ b/awards.html
@@ -27,7 +27,7 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li class="active"><a href="awards.html">Involvement & Awards</a></li>
-							<li><a href="interest.html">Interests</a></li>
+							<!-- <li><a href="interest.html">Interests</a></li> -->
 							<!-- <li><a href="ml_dojo.html">ML Dojo</a></li> -->
 							<li><a href="news.html">News</a></li>
 							<li><a href="blog.html">Blog</a></li>
