--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="awards.html">Involvement</a></li>
-							<li><a href="interest.html">Interests</a></li>
+							<!-- <li><a href="interest.html">Interests</a></li> -->
 							<li><a href="news.html">News</a></li>
 							<li class="active"><a href="blog.html">Blog</a></li>
 						</ul>
