--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Agustin Guerra<br /></h1>
+						<h1>Agustin Guerra, Ph.D<br /></h1>
 					
 						<p>Engineering Professional </a></p>
 						<ul class="actions">
@@ -65,10 +65,10 @@
 										and slope-stability analysis. I also have training in ground improvement techniques, traffic analysis, and modeling.
 										
 
-										Currently, I am pursuing a PhD in Civil Engineering at the University of Florida. 
+										Recently, I finished my PhD in Civil Engineering at the University of Florida. 
 										I am conducting my research in traffic operations. I am developing optimizations'
 										algorithms to exploit Connected and Automated Vehicles capabilities to improve traffic 
-										performance in arterials under the advising of <a href="https://www.essie.ufl.edu/people/name/lily-elefteriadou/" target="_blank">Dr. Lily Elefteriadou.</a>
+										performance in arterials with my former advisor <a href="https://www.essie.ufl.edu/people/name/lily-elefteriadou/" target="_blank">Dr. Lily Elefteriadou.</a>
 										My research is motivated by my extreme curiosity of evaluating the implementation of new technologies in the 
 										transportation field, and the 
 										desire of providing people with more freedom while commuting.  
@@ -420,12 +420,12 @@
 						<section>
 							<section class="alt">
 								<h3>Address</h3>
-								<p>2800 SW Williston Road <br />
-								Gainesville, FL 32608</p>
+								<p>462  Cranbrook Ct <br />
+								Orange Park, FL 32065</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="tel:858-888-6716">(858) 888-6716</a></p>
+								<p><a href="tel:+507-6494-8787">(+507) 6494-8787</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
