--- a/news.html
+++ b/news.html
@@ -138,12 +138,12 @@
 					<section>
 						<section class="alt">
 							<h3>Address</h3>
-							<p>2800 SW Williston Road <br />
-							Gainesville, FL 32608</p>
+							<p>462  Cranbrook Ct <br />
+							Orange Park, FL 32065</p>
 						</section>
 						<section>
 							<h3>Phone</h3>
-							<p><a href="tel:858-888-6716">(858) 888-6716</a></p>
+							<p><a href="tel:+507-6494-8787">(+507) 6494-8787</a></p>
 						</section>
 						<section>
 							<h3>Email</h3>
