--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
 									<h4 align="left">Summary</h4>
 									<p> I developed a scraper that extracts data from an advertisement website of real-state in Panama. 
 										The data is then preprocessed to develop predictive machine learning models 
-										(ANN, RF, Linear, and Polynomial regression). In the future, 
+										(ANN, RF, XGBoost, Linear, and Polynomial regression). In the future, 
 										I plan to incorporate data from different countries in the region and include network infrastructure data in the models. 
 										I hope this project will help stakeholders to make more informed decisions or 
 										to inform policymakers about the dynamic of the housing market in the region.  
 									</p>
 									<h4 align="left">Tools</h4>
-									<p>Python, NumPy, Matplotlib, Selenium, webdrivermanager, scikit-learn, TensorFlow.</p>
+									<p>Python, NumPy, Matplotlib, Selenium, webdrivermanager, scikit-learn, XGBoost, TensorFlow.</p>
 									<!-- <ul class="actions special"> -->
 										<!-- <li><a href="#" class="button">Full Story</a></li> -->
 									</ul>
