update link on demo

--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
 										<h2><a href="#">Data Scrapping and ML House Pricing Prediction</a></h2>
 										<h6><a href="#">Gainesville, FL</a></h6>
 									</header>
-									<a  class="image fit"><img src="images/rf_results.png" alt="" height="300"/></a>
+									<a  class="image fit"><img src="images/app3.PNG" alt="" height="300"/></a>
 									<h4 align="left">Summary</h4>
 									<p> I developed a scraper that extracts data from an advertisement website of real-state in Panama. 
 										The data is then preprocessed to develop predictive machine learning models 
 										(ANN, RF, XGBoost, Linear, and Polynomial regression). In the future, 
 										I plan to incorporate data from different countries in the region and include network infrastructure data in the models. 
 										I hope this project will help stakeholders to make more informed decisions or 
-										to inform policymakers about the dynamic of the housing market in the region.  
+										to inform policymakers about the dynamic of the housing market in the region. <a href="https://xgboostptyhousingprice-6isvxlzql0h.streamlit.app/" target="_blank" style="color:rgb(0, 162, 255)">(demo)</a>
 									</p>
 									<h4 align="left">Tools</h4>
 									<p>Python, NumPy, Matplotlib, Selenium, webdrivermanager, scikit-learn, XGBoost, TensorFlow.</p>
