--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/agustingu" target="_blank" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
 							<li><a href="https://github.com/agustingu" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
+							<!-- <li><a href="https://scholar.google.com/" class="ai ai-google-scholar-square ai-3x"><span class="label">Google Scholar</span></a></li> -->
 							<li><a href="https://www.researchgate.net/profile/Agustin-Guerra" target="_blank" class="icon brands fa-researchgate"><span class="label">Rese</span></a></li>
 						</ul>
 					</nav>
@@ -416,7 +415,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="mailto:agustinguerra@ufl.edu">agustinguerra@ufl.edu</a></p>
+								<p><a href="mailto:aguerra@indicatic.org.pa">aguerra@indicatic.org.pa</a></p>
 							</section>
 						
 						</section>
