--- a/elements reference.html
+++ b/elements reference.html
@@ -121,6 +121,7 @@
 												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 												<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 												<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+												<li><a href="https://scholar.google.com/" class="icon brands fa-google"><span class="label">Google Scholar</span></a></li>
 											</ul>
 											<ul class="icons alt">
 												<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
