--- a/index.html
+++ b/index.html
@@ -406,8 +406,8 @@
 						<section>
 							<section class="alt">
 								<h3>Address</h3>
-								<p>462  Cranbrook Ct <br />
-								Orange Park, FL 32065</p>
+								<p>Campus Victor Levi Sasso<br />
+								Edificio de Investigacion, 3er floor</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
